--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-gray-50 font-sans text-gray-900">
+  <body class="text-gray-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
